# maplang

./: CMakeLists.txt  readme.md  todo.md
include/: exceptions.h
include/interpreter/: bytecode.h  interpreter.h  memory.h
include/parser/: ast.h  lexer.h  parser.h  tokens.h  types.h
include/stdlib/: bridge.h  io.h
src/: exceptions.c  main.c
src/interpreter/: interpreter.c  memory.c
src/parser/: ast.c  lexer.c  parser.c
src/stdlib/: io.c
